--- a/isis/src/mro/apps/hidtmgen/tsts/polar/Makefile
+++ b/isis/src/mro/apps/hidtmgen/tsts/polar/Makefile
@@ -7,46 +7,55 @@ APPNAME = hidtmgen
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) DTM=$(INPUT)/Polar_Crater_1_1m_ngate_edited2_forPDS.cub \
-	  ORTHO1=$(INPUT)/PSP_009404_2635_RED_NLstretch_1m_o_forPDS.cub \
-	  ORTHO2=$(INPUT)/PSP_009404_2635_RED_NLstretch_25cm_o_forPDS.cub \
-  	  ORTHO3=$(INPUT)/PSP_010221_2635_RED_NLstretch_1m_o_forPDS.cub \
-	  ORTHO4=$(INPUT)/PSP_010221_2635_RED_NLstretch_25cm_o_forPDS.cub \
-	  OUTPUTDIR=$(OUTPUT) \
-	  PARAMSPVL=$(INPUT)/parameters.pvl \
-	  RATIONALE_DESC=Rationale \
-	  > /dev/null;
+	$(LS) $(INPUT)/PSP*.cub > $(OUTPUT)/orthoInputList.txt;
+	echo "1" >  $(OUTPUT)/sequence.txt;
+	echo "2" >> $(OUTPUT)/sequence.txt;
+	echo "3" >> $(OUTPUT)/sequence.txt;
+	echo "4" >> $(OUTPUT)/sequence.txt;
+	$(APPNAME) OUTPUTDIR=$(OUTPUT) \
+	           DTM=$(INPUT)/Polar_Crater_1_1m_ngate_edited2_forPDS.cub \
+	           ORTHOFROMLIST=$(OUTPUT)/orthoInputList.txt \
+	           ORTHOSEQUENCE=$(OUTPUT)/sequence.txt \
+	           PARAMSPVL=$(INPUT)/parameters.pvl \
+	           > /dev/null;
 	
-	head -n 83 $(OUTPUT)/DTEPC_009404_2635_010221_2635_Z12.IMG \
-	  > $(OUTPUT)/DTEPC_009404_2635_010221_2635_Z12.pvl;
-	head -n 82 $(OUTPUT)/DT1PA_009404_2635_010221_2635_Z12.IMG \
-	  > $(OUTPUT)/DT1PA_009404_2635_010221_2635_Z12.pvl;
-	head -n 82 $(OUTPUT)/DT1PC_009404_2635_010221_2635_Z12.IMG \
-	  > $(OUTPUT)/DT1PC_009404_2635_010221_2635_Z12.pvl;
-	head -n 82 $(OUTPUT)/DT2PA_009404_2635_010221_2635_Z12.IMG \
-	  > $(OUTPUT)/DT2PA_009404_2635_010221_2635_Z12.pvl;
-	head -n 82 $(OUTPUT)/DT2PC_009404_2635_010221_2635_Z12.IMG \
-	  > $(OUTPUT)/DT2PC_009404_2635_010221_2635_Z12.pvl;
+	catlab from=$(OUTPUT)/DTEPC_009404_2635_010221_2635_Z12.IMG \
+	       to=$(OUTPUT)/DTEPC_009404_2635_010221_2635_Z12.pvl \
+	       > /dev/null;  
+	catlab from=$(OUTPUT)/PSP_009404_2635_RED_C_1_ORTHO.IMG \
+	       to=$(OUTPUT)/PSP_009404_2635_RED_C_1_ORTHO.pvl \
+	       > /dev/null;  
+	catlab from=$(OUTPUT)/PSP_009404_2635_RED_A_2_ORTHO.IMG \
+	       to=$(OUTPUT)/PSP_009404_2635_RED_A_2_ORTHO.pvl \
+	       > /dev/null;  
+	catlab from=$(OUTPUT)/PSP_010221_2635_RED_C_3_ORTHO.IMG \
+	       to=$(OUTPUT)/PSP_010221_2635_RED_C_3_ORTHO.pvl \
+	       > /dev/null;  
+	catlab from=$(OUTPUT)/PSP_010221_2635_RED_A_4_ORTHO.IMG \
+	       to=$(OUTPUT)/PSP_010221_2635_RED_A_4_ORTHO.pvl \
+	       > /dev/null;  
 	
-	pds2isis from=$(OUTPUT)/DT1PA_009404_2635_010221_2635_Z12.IMG \
-	  to=$(OUTPUT)/DT1PA_009404_2635_010221_2635_Z12.cub \
-	  > /dev/null;  
-	pds2isis from=$(OUTPUT)/DT1PC_009404_2635_010221_2635_Z12.IMG \
-	  to=$(OUTPUT)/DT1PC_009404_2635_010221_2635_Z12.cub \
-	  > /dev/null;  
-	pds2isis from=$(OUTPUT)/DT2PA_009404_2635_010221_2635_Z12.IMG \
-	  to=$(OUTPUT)/DT2PA_009404_2635_010221_2635_Z12.cub \
-	  > /dev/null;  
-	pds2isis from=$(OUTPUT)/DT2PC_009404_2635_010221_2635_Z12.IMG \
-	  to=$(OUTPUT)/DT2PC_009404_2635_010221_2635_Z12.cub \
-	  > /dev/null;  
 	pds2isis from=$(OUTPUT)/DTEPC_009404_2635_010221_2635_Z12.IMG \
-	  to=$(OUTPUT)/DTEPC_009404_2635_010221_2635_Z12.cub \
-	  > /dev/null;  
+	         to=$(OUTPUT)/DTEPC_009404_2635_010221_2635_Z12.cub \
+	         > /dev/null;  
+	pds2isis from=$(OUTPUT)/PSP_009404_2635_RED_C_1_ORTHO.IMG \
+	         to=$(OUTPUT)/PSP_009404_2635_RED_C_1_ORTHO.cub \
+	         > /dev/null;  
+	pds2isis from=$(OUTPUT)/PSP_009404_2635_RED_A_2_ORTHO.IMG \
+	         to=$(OUTPUT)/PSP_009404_2635_RED_A_2_ORTHO.cub \
+	         > /dev/null;  
+	pds2isis from=$(OUTPUT)/PSP_010221_2635_RED_C_3_ORTHO.IMG \
+	         to=$(OUTPUT)/PSP_010221_2635_RED_C_3_ORTHO.cub \
+	         > /dev/null;  
+	pds2isis from=$(OUTPUT)/PSP_010221_2635_RED_A_4_ORTHO.IMG \
+	         to=$(OUTPUT)/PSP_010221_2635_RED_A_4_ORTHO.cub \
+	         > /dev/null;  
 	
-	rm $(OUTPUT)/DT1PA_009404_2635_010221_2635_Z12.IMG;
-	rm $(OUTPUT)/DT1PC_009404_2635_010221_2635_Z12.IMG;
-	rm $(OUTPUT)/DT2PA_009404_2635_010221_2635_Z12.IMG;
-	rm $(OUTPUT)/DT2PC_009404_2635_010221_2635_Z12.IMG;
-	rm $(OUTPUT)/DTEPC_009404_2635_010221_2635_Z12.IMG;
+	$(RM) $(OUTPUT)/DTEPC_009404_2635_010221_2635_Z12.IMG;
+	$(RM) $(OUTPUT)/PSP_009404_2635_RED_C_1_ORTHO.IMG;
+	$(RM) $(OUTPUT)/PSP_009404_2635_RED_A_2_ORTHO.IMG;
+	$(RM) $(OUTPUT)/PSP_010221_2635_RED_C_3_ORTHO.IMG;
+	$(RM) $(OUTPUT)/PSP_010221_2635_RED_A_4_ORTHO.IMG;
+	$(RM) $(OUTPUT)/orthoInputList.txt;
+	$(RM) $(OUTPUT)/sequence.txt;
 
