PROG: Fixed a couple of bugs found in hidtmgen while adding new tests. References #801
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6626 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/mro/apps/hidtmgen/tsts/color/Makefile
+++ b/isis/src/mro/apps/hidtmgen/tsts/color/Makefile
@@ -12,7 +12,7 @@ APPNAME = hidtmgen
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	ls $(INPUT)/ESP*.cub > $(OUTPUT)/orthoInputList.txt;
+	$(LS) $(INPUT)/ESP*.cub > $(OUTPUT)/orthoInputList.txt;
 	$(APPNAME) DEFAULTNAMES=TRUE \
 	           OUTPUTDIR=$(OUTPUT) \
 	           DTM=$(INPUT)/Ares4_Marth_Crater_3557E_126N_ngate_03.cub \
@@ -21,8 +21,8 @@ commands:
 	           ORTHOSEQUENCENUMBERLIST=$(INPUT)/sequenceNumbers.txt \
 	           > /dev/null;
 
-	catlab from=$(OUTPUT)/DTEED_042252_1930_042753_1930_A01.IMG \
-	       to=$(OUTPUT)/DTEED_042252_1930_042753_1930_A01.pvl \
+	catlab from=$(OUTPUT)/DTEED_042252_1930_042753_1930_A31.IMG \
+	       to=$(OUTPUT)/DTEED_042252_1930_042753_1930_A31.pvl \
 	       > /dev/null;  
 	catlab from=$(OUTPUT)/ESP_042252_1930_IRB_B_41_ORTHO.IMG \
 	       to=$(OUTPUT)/ESP_042252_1930_IRB_B_41_ORTHO.pvl \
@@ -37,8 +37,8 @@ commands:
 	       to=$(OUTPUT)/ESP_042753_1930_IRB_D_59_ORTHO.pvl \
 	       > /dev/null;  
 	
-	pds2isis from=$(OUTPUT)/DTEED_042252_1930_042753_1930_A01.IMG \
-	         to=$(OUTPUT)/DTEED_042252_1930_042753_1930_A01.cub \
+	pds2isis from=$(OUTPUT)/DTEED_042252_1930_042753_1930_A31.IMG \
+	         to=$(OUTPUT)/DTEED_042252_1930_042753_1930_A31.cub \
 	         > /dev/null;
 	pds2isis from=$(OUTPUT)/ESP_042252_1930_IRB_B_41_ORTHO.IMG \
 	         to=$(OUTPUT)/ESP_042252_1930_IRB_B_41_ORTHO.cub \
@@ -53,7 +53,7 @@ commands:
 	         to=$(OUTPUT)/ESP_042753_1930_IRB_D_59_ORTHO.cub \
 	         > /dev/null;  
 	
-	$(RM) $(OUTPUT)/DTEED_042252_1930_042753_1930_A01.IMG;
+	$(RM) $(OUTPUT)/DTEED_042252_1930_042753_1930_A31.IMG;
 	$(RM) $(OUTPUT)/ESP_042252_1930_IRB_B_41_ORTHO.IMG;
 	$(RM) $(OUTPUT)/ESP_042252_1930_IRB_D_31_ORTHO.IMG;
 	$(RM) $(OUTPUT)/ESP_042753_1930_IRB_B_26_ORTHO.IMG;
