PROG: Fixed bugs in cnet2dem appTests. References #3869
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6633 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnet2dem/tsts/default/Makefile
+++ b/isis/src/control/apps/cnet2dem/tsts/default/Makefile
@@ -9,4 +9,7 @@ commands:
 	  to=$(OUTPUT)/truthDemNet \
 	  map=$(INPUT)/truthMap.map \
 	  search=both \
-	  algorithm=FrankeNelsonRadius,ShepardsRadius,AverageRadius,MedianRadius,MinimumRadius,MaximumRadius,StandardDeviationRadius,TypeCount,AverageDistance,MinimumDistance,MaximumDistance,StandardDeviationDistance,MedianDistance,NaturalNeighborRadius \
+	  algorithm="FrankeNelsonRadius,ShepardsRadius,AverageRadius,MedianRadius,MinimumRadius,MaximumRadius,StandardDeviationRadius,TypeCount,AverageDistance,MinimumDistance,MaximumDistance,StandardDeviationDistance,MedianDistance,NaturalNeighborRadius" \
+	  > /dev/null;
+
+	$(RM) $(OUTPUT)/networks.lis;
