--- a/isis/src/control/apps/cnet2dem/tsts/cnetlist/Makefile
+++ b/isis/src/control/apps/cnet2dem/tsts/cnetlist/Makefile
@@ -7,7 +7,8 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(LS) -1 $(INPUT)/EN*combined\.net > $(INPUT)/networks.lis;
 	$(APPNAME) cnetlist=$(INPUT)/networks.lis \
-	  to=$(OUTPUT)/Equi065S355ED10_dem \
-	  map=$(INPUT)/Equi065S355ED10.map \
-	  algorithm=FrankeNelsonRadius,ShepardsRadius,AverageRadius,MedianRadius,MinimumRadius,MaximumRadius,StandardDeviationRadius,TypeCount,AverageDistance,MinimumDistance,MaximumDistance,StandardDeviationDistance,MedianDistance,NaturalNeighborRadius > /dev/null;
+	           to=$(OUTPUT)/Equi065S355ED10_dem \
+	           map=$(INPUT)/Equi065S355ED10.map \
+	           algorithm="FrankeNelsonRadius,ShepardsRadius,AverageRadius,MedianRadius,MinimumRadius,MaximumRadius,StandardDeviationRadius,TypeCount,AverageDistance,MinimumDistance,MaximumDistance,StandardDeviationDistance,MedianDistance,NaturalNeighborRadius" \
+	           > /dev/null;
 	$(RM) $(INPUT)/networks.lis;
