--- a/isis/src/control/apps/cnet2dem/tsts/cnetlist/Makefile
+++ b/isis/src/control/apps/cnet2dem/tsts/cnetlist/Makefile
@@ -5,10 +5,10 @@ APPNAME = cnet2dem
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(LS) -1 $(INPUT)/EN*combined\.net > $(INPUT)/networks.lis;
-	$(APPNAME) cnetlist=$(INPUT)/networks.lis \
+	$(LS) -1 $(INPUT)/EN*combined\.net > $(OUTPUT)/networks.lis;
+	$(APPNAME) cnetlist=$(OUTPUT)/networks.lis \
 	           to=$(OUTPUT)/Equi065S355ED10_dem \
 	           map=$(INPUT)/Equi065S355ED10.map \
 	           algorithm="FrankeNelsonRadius,ShepardsRadius,AverageRadius,MedianRadius,MinimumRadius,MaximumRadius,StandardDeviationRadius,TypeCount,AverageDistance,MinimumDistance,MaximumDistance,StandardDeviationDistance,MedianDistance,NaturalNeighborRadius" \
 	           > /dev/null;
-	$(RM) $(INPUT)/networks.lis;
+	$(RM) $(OUTPUT)/networks.lis;
