PROG: Removed Apollo control networks from findfeatures truth data. They are not consistent across all platforms. References #1815
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6636 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/findfeatures/tsts/apollo/Makefile
+++ b/isis/src/control/apps/findfeatures/tsts/apollo/Makefile
@@ -25,3 +25,4 @@ commands:
 	       >& $(OUTPUT)/cubes.txt;
 	$(RM) $(OUTPUT)/toList.txt;
 	$(RM) $(OUTPUT)/apollo_nadir.lis;
+	$(RM) $(OUTPUT)/apolloAS15_1583.net;
