--- a/isis/src/control/apps/findfeatures/tsts/filters/Makefile
+++ b/isis/src/control/apps/findfeatures/tsts/filters/Makefile
@@ -3,49 +3,30 @@ APPNAME = findfeatures
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(LS) -1 $(INPUT)/Sub4-AS15-M-0584_msk_cropped.cub > $(OUTPUT)/apollo_nadir.lis;
-
-	$(APPNAME) algorithm="sift/sift" \
-	           match=$(INPUT)/Sub4-AS15-M-0583_msk_cropped.cub \
-	           fromlist=$(OUTPUT)/apollo_nadir.lis \
-	           onet=$(OUTPUT)/apolloAS15_1583_none.net \
-	           epitolerance=1.0 \
-	           ratio=0.65 \
-	           hmgtolerance=1.0 \
+	$(APPNAME) from=$(INPUT)/EW0211981114G.lev1.cub \
+	           match=$(INPUT)/EW0242463603G.lev1.cub \
+	           algorithm=surf/surf \
+	           onet=$(OUTPUT)/mess_sobel.net \
 	           filter=sobel \
+	           networkid="Messenger Sobel" \
+	           pointid="Messenger_sobel_????" \
+	           description="Test Messenger - Sobel Filter" \
+	           >& /dev/null; 
+
+	$(APPNAME) from=$(INPUT)/Sub4-AS15-M-0583_msk_cropped.cub \
+	           match=$(INPUT)/Sub4-AS15-M-0584_msk_cropped.cub \
+	           algorithm=sift/sift \
+	           onet=$(OUTPUT)/app_scharr.net \
+	           filter=scharr \
+	           epitol=1.0 \
+	           ratio=0.65 \
+	           hmg=1.0 \
 	           maxpoints=5000 \
-	           networkid="ApolloAS15_0583_none" \
-	           pointid="AS15_0583_sobel_????" \
-	           description="Test Apollo 15 images - No Filter" \
 	           debug=false \
+	           networkid="Apollo Scharr" \
+	           pointid="Apollo_scharr_????" \
+	           description="Test Apollo - Scharr Filter" \
 	           >& /dev/null; 
 
-	$(APPNAME) algorithm="sift/sift" \
-	           match=$(INPUT)/Sub4-AS15-M-0583_msk_cropped.cub \
-	           fromlist=$(OUTPUT)/apollo_nadir.lis \
-	           onet=$(OUTPUT)/apolloAS15_1583_sobel.net \
-	           filter=sobel maxpoints=5000 \
-	           epitolerance=1.0 \
-	           ratio=0.65 \
-	           hmgtolerance=1.0 \
-	           networkid="ApolloAS15_0583_sobel" \
-	           pointid="AS15_0583_sobel_????" \
-	           description="Test Apollo 15 images - Sobel Filter" \
-	           debug=false \
-	           >& /dev/null; 
-
-	$(APPNAME) algorithm="sift/sift" \
-	           match=$(INPUT)/Sub4-AS15-M-0583_msk_cropped.cub \
-	           fromlist=$(OUTPUT)/apollo_nadir.lis \
-	           onet=$(OUTPUT)/apolloAS15_1583_scharr.net \
-	           epitolerance=1.0 \
-	           ratio=0.65 \
-	           hmgtolerance=1.0 \
-	           filter=scharr maxpoints=5000 \
-	           networkid="ApolloAS15_0583_scharr" \
-	           pointid="AS15_0583_scharr_????" \
-	           description="Test Apollo 15 images - Scharr Filter" \
-	           debug=false \
-	           >& /dev/null; 
-
-	$(RM) $(OUTPUT)/apollo_nadir.lis; 
+	# remove apollo network - not same across all platforms
+	$(RM) $(OUTPUT)/app_scharr.net;
