--- a/isis/src/control/apps/findfeatures/tsts/apollo/Makefile
+++ b/isis/src/control/apps/findfeatures/tsts/apollo/Makefile
@@ -3,8 +3,8 @@ APPNAME = findfeatures
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	ls -1 $(INPUT)/Sub4-AS15-M-058[4-5]_msk.cub > $(OUTPUT)/apollo_nadir.lis;
-	$(APPNAME) algorithm="sift/sift" \
+	$(LS) -1 $(INPUT)/Sub4-AS15-M-058[4-5]_msk.cub > $(OUTPUT)/apollo_nadir.lis;
+	$(APPNAME) algorithm="brisk/brisk" \
 	           match=$(INPUT)/Sub4-AS15-M-0583_msk.cub \
 	           fromlist=$(OUTPUT)/apollo_nadir.lis \
 	           tolist=$(OUTPUT)/toList.txt \
@@ -23,6 +23,9 @@ commands:
 	# Need to trim filepaths from TOLIST output
 	$(SED) 's|.*/\([^/]*\)|\1|' $(OUTPUT)/toList.txt \
 	       >& $(OUTPUT)/cubes.txt;
+	$(SED) 's|.*/\([^/]*\)|\1|' $(OUTPUT)/unmatched.txt \
+	       >& $(OUTPUT)/unmatchedTruth.txt;
 	$(RM) $(OUTPUT)/toList.txt;
 	$(RM) $(OUTPUT)/apollo_nadir.lis;
 	$(RM) $(OUTPUT)/apolloAS15_1583.net;
+	$(RM) $(OUTPUT)/unmatched.txt;
