PROG: Updated documentation and removed unnecessary include files from cnet2dem's directory. References #3869.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6643 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnet2dem/Makefile
+++ b/isis/src/control/apps/cnet2dem/Makefile
@@ -1,12 +1,7 @@
-include $(ISISROOT)/make/isismake.apps
-
-ifeq ($(HOST_ARCH),Darwin)
-ALLINCDIRS += -I/work/users/kbecker/NaturalNeighbors/include
-ALLLIBDIRS += -L/work/users/kbecker/NaturalNeighbors/lib
+ifeq ($(ISISROOT), $(BLANK))
+.SILENT:
+error:
+	echo "Please set ISISROOT";
 else
-ALLINCDIRS += -I$(ISISROOT)/3rdParty/extras/include
-ALLLIBDIRS += -L$(ISISROOT)/3rdParty/extras/lib
+	include $(ISISROOT)/make/isismake.apps
 endif
-
-ALLLIBS += -lnn
-
