PROG New libs for opencv and reverse OPENCVLIBS changes
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6655 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/findfeatures/Makefile
+++ b/isis/src/control/apps/findfeatures/Makefile
@@ -5,3 +5,9 @@ error:
 else
 	include $(ISISROOT)/make/isismake.apps
 endif
+
+# Since opencv include path and libs are not in isismake.os
+# (so all apps don't link against the large opencv libraries)
+# we need to make sure those are added here:
+ALLLIBS += $(OPENCVLIBS)
+
